# totebot_project

./: .gitignore  README.md  requirements.txt
totebot_gui/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
totebot_gui/src/: index.css
totebot_gui/src/components/: AssistControls.tsx  CameraFeed.tsx  IMUView.tsx  MechanismControls.tsx  MissionControls.tsx  SafetyControls.tsx  TelemetryPanel.tsx  VirtualJoystick.tsx
totebot_gui/src/hooks/: useAutoAlign.tsx  useImu.ts  useLifterControl.ts  useMotors.ts  useRos.ts  useRosConnection.ts
totebot_gui/src/pages/: Index.tsx
totebot_gui/src/services/: rosService.ts
totebot_ws/firmware/esp32/: platformio.ini
totebot_ws/firmware/esp32/src/: main.cpp
totebot_ws/src/totebot_bringup/: package.xml  setup.cfg  setup.py
totebot_ws/src/totebot_bringup/launch/: hardware.launch.py
totebot_ws/src/totebot_hardware/: package.xml  setup.cfg  setup.py
totebot_ws/src/totebot_hardware/totebot_hardware/: basket_actuator_driver.py  camera.py  encoder_telemetry.py  imu_driver.py  lifter_controller.py  micro_ros_bridge.py  motor_driver.py  motoron.py  open_loop_motor_driver.py
