<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>totebot_bringup</name>
  <version>0.0.1</version>
  <description>Master launch system for ToteBot</description>
  <maintainer email="kevin@example.com">Kevin Serafin</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>